force-app/main/default/objects/Flight__c/fields/Airline_Name__c.field-meta.xml
<CustomField>
    <fullName>Airline_Name__c</fullName>
    <label>Airline Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>