force-app/main/default/objects/Flight__c/fields/Amadeus_Offer_ID__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_Offer_ID__c</fullName>
    <label>Amadeus Offer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>