force-app/main/default/objects/Flight__c/fields/Arrival_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Arrival_DateTime__c</fullName>
    <label>Arrival DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>